fix: fix non-visited links being wrong colour

--- a/src/Dfe.PlanTech.Web.Node/styles/scss/vertical-navigation.scss
+++ b/src/Dfe.PlanTech.Web.Node/styles/scss/vertical-navigation.scss
@@ -23,9 +23,7 @@
 
 .dfe-vertical-nav__link,
 .dfe-vertical-nav__link--selected {
-  &:visited {
-    color: var(--govuk-link-color);
-  }
+  color: var(--govuk-link-color);
 
   &:active, &:hover {
     background-color: #fd0;
